# deep-space-object-explorer

./: .gitignore  CATALOG_DATAFLOW.md  README.md  TODO.md  app.py  app_constants.py  app_preferences.py  app_theme.py  catalog_ingestion.py  catalog_issue_backlog.md  catalog_service.py  dso_explorer_web_prd_v1.md  list_settings_ui.py  prefs_cookie_backup.py  requirements.txt  weather_service.py
.github/: labeler.yml
.streamlit/: config.toml  secrets.toml.example
catalog_runtime/: catalog_service.py
condition_tips/: engine.py  ui.py
data/: 1000_popular_deep_sky_objects_missing_from_parquet.csv  dso_catalog_cache.parquet  dso_catalog_cache_meta.json  dso_catalog_seed.csv  object_type_groups.csv  simbad_otype_mapping.csv  wikipedia_catalog_enrichment_review.html
docs/: CATALOG_DATAFLOW.md  dso_explorer_web_prd_v1.md  google_auth_sync_issue_136_design.md  panorama_hrz_capture_test_instructions.md  refactoring.md
dso_enricher/: .gitignore  README.md  catalog_ingestion.py  catalog_service.py  pyproject.toml  requirements.txt
dso_enricher/scripts/: run_milestone.sh
dso_enricher/src/dso_enricher/: __init__.py  __main__.py  cli.py  enricher.py  normalization.py  schema.py  sources.py
dso_enricher/tests/: test_normalization.py  test_pipeline.py  test_schema.py
features/: __init__.py
lists/: __init__.py  list_search.py  list_settings_ui.py  list_subsystem.py
runtime/: __init__.py  brightness_policy.py  google_drive_sync.py  google_drive_sync_runtime.py  location_resolution.py  lunar_eclipse_catalog.py  lunar_ephemeris.py  noaa_goes_cloud_loop.py  (+3 more)
(+51 files in other folders)
