[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dso-enricher"
version = "0.1.0"
description = "CSV enrichment pipeline for Deep Sky Objects."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
dso-enricher = "dso_enricher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
